Fix mobile header layout overflow and hamburger menu double-toggle bug

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,8 @@ header {
     position: sticky;
     top: 0;
     z-index: 1000;
+    box-sizing: border-box;
+    width: 100%;
 }
 
 .logo-text {
@@ -219,7 +221,7 @@ nav a.active {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     z-index: 0;
     pointer-events: none;
@@ -283,7 +285,7 @@ footer {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     z-index: 10;
     opacity: 0.5;
